[project]
name = "openai-agents-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "ipykernel>=7.2.0",
    "litellm>=1.83.4",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "openai-agents>=0.13.5",
    "pydantic>=2.12.5",
]
